# praxis-deid-tool

./: .gitignore  README.md  SECURITY_AUDIT.md  pyproject.toml
.github/workflows/: test.yml
examples/: praxis-deid.example.yaml
mappings/open_dental/: A_treatment_plans_raw.json  B_claims_raw.json  C_schedule_capacity_raw.json  D_payments_raw.json  E_timekeeping_raw.json  F_patients_raw_extension.json  README.md  _bundle.json
praxis_deid/: __init__.py  __main__.py  audit.py  cli.py  config.py  deidentify.py  hashing.py  safe_harbor.py  schema.py  upload.py
praxis_deid/extractors/: __init__.py  base.py  cli.py  extension_a_treatment_plans.py  extension_b_claims.py  extension_c_schedule_capacity.py  extension_d_payments.py  extension_e_timekeeping.py  extension_f_patients.py  rows.py
praxis_deid/extractors/connectors/: __init__.py  _sqlalchemy_base.py  base.py  json_fixture.py  mssql.py  mysql.py  postgres.py
praxis_deid/serve/: __init__.py  app.py  phi_scan.py  runner.py
praxis_deid/serve/static/: app.css  app.js
praxis_deid/serve/templates/: index.html
praxis_deid/sources/: __init__.py  csv_source.py
praxis_deid/wizard/: __init__.py  canonical_schemas.py  claude_mapper.py  cli.py  human_approval.py  mapping_validator.py  schema_reader.py
scripts/: build_ground_truth.py  generate_synthetic.py  run_gate.sh  split_ground_truth.py  validate_wizard.py
tests/: test_config.py  test_deidentify.py  test_end_to_end.py  test_extractor_a_treatment_plans.py  test_extractor_b_claims.py  test_extractor_base.py  test_extractor_c_capacity.py  test_extractor_cli_e2e.py  test_extractor_connector_dispatch.py  test_extractor_connector_json_fixture.py  test_extractor_connector_mssql.py  test_extractor_connector_mysql.py  test_extractor_connector_postgres.py  test_extractor_connector_security.py  test_extractor_d_payments.py  test_extractor_e_timekeeping.py  test_extractor_f_patients.py  test_hashing.py  test_safe_harbor.py  test_serve.py  test_wizard_canonical_schemas.py  test_wizard_claude_mapper.py  test_wizard_mapping_validator.py  test_wizard_schema_reader.py
tests/fixtures/: appointments_raw.csv  open_dental_schema.json  patients_raw.csv  procedures_raw.csv  providers_raw.csv
tests/fixtures/anthropic_responses/: open_dental_treatment_plans.json
